spade-tests/src/snapshots/spade_tests__parser__identifier_in_entity_instance.snap
---
source: spade-tests/src/parser.rs
---
entity a() -> bool {
    inst 123
}


error: Unexpected `integer`, expected `identifier` or `pipeline depth`
  ┌─ testinput:2:10
  │
2 │     inst 123
  │          ^^^ expected `identifier` or `pipeline depth`


